<resources>
    <string name="app_name">Pactogramma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pactogramma</string>
    <string name="nav_header_subtitle">Version 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fn_ln">Ф.И.О. :</string>
    <string name="what_pregnancy">Какая беременность :</string>
    <string name="which_account_birth">Какие по счёту роды:</string>
    <string name="data_and_time_hospitalization">Даты и время госпитализации</string>
    <string name="period_duration">Длительность безродового периода:</string>
    <string name="number_medical_history">Номер истории болезни :</string>
    <string name="add_pulses">Введите пульc плода</string>
    <string name="time_read_pulse">• Время записи</string>
    <string name="load_file">Загрузить данные из файла</string>
    <string name="analiz">Анализ файла с данными</string>
    <string name="delete_contact">Удалить контакт</string>
    <string name="add_data">Добавить данные</string>
    <string name="temperature">Температура</string>
    <string name="add_temperature">Введите температуру</string>
    <string name="oxytocin">• Введите концентрацию Окситоцина</string>
</resources>
