<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="@string/fn_ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/fn_ln"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/what_pregnancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/what_pregnancy"
        android:id="@+id/what_pregnancy_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/which_account_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/which_account_birth"
        android:hint="@string/which_account_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/number_medical_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/number_medical_history"
        android:hint="@string/number_medical_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/data_and_time_hospitalization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/data_and_time_hospitalization"
        android:hint="@string/data_and_time_hospitalization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/period_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/period_duration"
        android:hint="@string/period_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/add_new_patients_button"
        android:layout_margin="@dimen/fab_margin"
        android:text="Добавить "
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>