<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/load_file_button"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/load_file"
        android:textSize="@dimen/text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/check_file_button"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/analiz"
        android:textSize="@dimen/text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/delete_contact"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/delete_contact"
        android:textSize="@dimen/text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>